--- a/TestBookReader/TestBookReader/pages/home/home.html
+++ b/TestBookReader/TestBookReader/pages/home/home.html
@@ -11,9 +11,9 @@
     <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
 
     <link href="/css/default.css" rel="stylesheet" />
+    <link href="/booklet/jquery.booklet.1.1.0.css" rel="stylesheet"/>
     <link href="/pages/home/home.css" rel="stylesheet" />
     <script src="/pages/home/home.js"></script>
-    <script src="/pages/home/reader.js"></script>
 </head>
 <body>
     <!-- 将加载和显示的内容。 -->
@@ -28,11 +28,21 @@
             <div class="content">
                 <input type="file" onchange='readText(this)' />
                 <br/>
-                <hr/>
-                <div id="main"></div>
+                <div class="book_wrapper">
+                <a id="next_page_button"></a>
+                <a id="prev_page_button"></a>
+                <div id="mybook" style="display:none;">
+                    <div class="b-load"></div>
+                </div>
+                </div>
+                </div>
             </div>
         </section>
     </div>
-    <script src="/pages/home/pager.js"></script>
+    <script src="/js/jquery-1.10.2.min.js"></script>
+    <script src="/booklet/jquery.easing.1.3.js"></script>
+    <script src="/booklet/jquery.booklet.1.1.0.js"></script>
+    <script src="/pages/home/reader.js"></script>
+    <script src="/js/Sim2Tra.js"></script>
 </body>
 </html>
